--- a/Cms MVC/Views/Home/CheckUsers.cshtml
+++ b/Cms MVC/Views/Home/CheckUsers.cshtml
@@ -19,6 +19,9 @@
             @Html.DisplayNameFor(model => model.UserName)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.PhoneNumber)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Roles)
         </th>
         <th></th>
@@ -34,6 +37,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.UserName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.PhoneNumber)
         </td>
         <td>
             @if (item.Roles.Count > 0)
